# smriti-combined

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json
smriti-backend/: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
smriti-backend/app/: main.py
smriti-backend/app/ai_providers/: __init__.py  anthropic_provider.py  base.py  factory.py  local_provider.py  mock_provider.py  openai_provider.py
smriti-backend/app/auth/: __init__.py  dependencies.py  repository.py  router.py  schemas.py  service.py  validators.py
smriti-backend/app/circles/: __init__.py  constants.py  dependencies.py  repository.py  router.py  schemas.py  service.py
smriti-backend/app/companion/: __init__.py  dependencies.py  rate_limiter.py  repository.py  router.py  schemas.py  service.py  validation.py
smriti-backend/app/config/: __init__.py  constants.py  logging_config.py  settings.py
smriti-backend/app/constants/: __init__.py  api.py  errors.py
smriti-backend/app/database/: __init__.py  connection.py  (+1 more)
smriti-backend/docs/: API_DESIGN.md  authentication_model.md  backend_requirements.md  frontend_integration_guide.md  frontend_simple_guide.md  main.md  postman_testing_guide.md  profile_page_api.md  render_deployment_guide.md  scaling_guide.md
smriti-backend/scripts/: create_test_db.py  generate_render_credentials.py  test_connection.py
smriti-backend/tests/: __init__.py  conftest.py  test_search_logic.py
(+267 files in other folders)
